--- a/00-starter-files/shopping-list/style.css
+++ b/00-starter-files/shopping-list/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap");
 
 *,
 *::before,
@@ -8,8 +8,12 @@
   box-sizing: border-box;
 }
 
+.edit-mode {
+  color: #ccc;
+}
+
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 16px;
   line-height: 1.5;
   color: #333;
